--- a/_config.yml
+++ b/_config.yml
@@ -30,24 +30,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: SweetCake
+subtitle: Кусочек удовольствия!
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
-avatar: assets/images/avatar.jpg
-
+  Изящные торты
+author: Татьяна Таргоний
+email: vestichka@bigmir.net
+avatar: assets/images/face1.jpg
+ 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "/vestya" # the subpath of your site, e.g. /blog
+url: "/vestya" # the base hostname & protocol for your site
 
 # Social settings
 facebook_url:
 github_url:
 googleplus_url:
-instagram_url:
+instagram_url: https://www.instagram.com/vestichka/
 linkedin_url:
 pinterest_url:
 slack_url:
