--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Изящные торты
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
-avatar: assets/images/Lichtfestival-2.png.jp-1400x1050
+avatar: assets/images/face1.jpg
  
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/vestya" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
+url: "https://targoniy.github.io" # the base hostname & protocol for your site
 
 # Social settings
 facebook_url:
@@ -56,7 +56,6 @@ twitter_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-theme: jekyll-theme-prologue
 collections: [sections]
 defaults:
     scope:
