--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
+#  Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
@@ -36,7 +36,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Изящные торты
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
-avatar: assets/images/face1.jpg
+avatar: assets/images/top.jpg
  
 # You'll want to customize url and baseurl for your own site:
 baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
