--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,6 @@
 title: SweetCake
 subtitle: Bon Appétit!
 description: >- # this means to ignore newlines until "baseurl:"
-  Изящные торты
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
 avatar: assets/images/top.jpg
@@ -56,7 +55,12 @@ twitter_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-collections: [sections]
+collections:
+  sections:
+  cakes:
+    output: true
+  pages:
+    output: true
 defaults:
     scope:
     path: "assets/images"
