--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -35,3 +35,6 @@ pictures:
 - filename: cake
   original: cakes.jpg
   thumbnail: falce     
+- filename: cut
+  original: cut.jpg
+  thumbnail: falce      
