added several cakes

--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -38,3 +38,6 @@ pictures:
 - filename: cut
   original: cut.jpg
   thumbnail: falce      
+- filename: velvet
+  original: velvet.jpg
+  thumbnail: falce      
