--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ avatar: assets/images/top.jpg
  
 # You'll want to customize url and baseurl for your own site:
 baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
-url: "sweetcake.biz.ua." # the base hostname & protocol for your site
+url: "sweetcake.biz.ua" # the base hostname & protocol for your site
 
 # Social settings
 facebook_url: https://www.facebook.com/vestichka
