--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ email: vestichka@bigmir.net
 avatar: assets/images/top.jpg
  
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
+# baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
 # url: "sweetcake.biz.ua" # the base hostname & protocol for your site
 
 # Social settings
