--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -4,46 +4,46 @@ pictures:
   thumbnail: Lichtfestival.png.jp-1400x1050.jpg
 - filename: DSC05217_c0cygz_c_scale,w_1400
   original: DSC05217_c0cygz_c_scale,w_1400.jpg
-  thumbnail: falce
+  thumbnail: false
 - filename: DSC05222_i4uxjp_c_scale,w_1400
   original: DSC05222_i4uxjp_c_scale,w_1400.jpg
-  thumbnail: falce
+  thumbnail: false
 - filename: DSC05226_wvi31v_c_scale,w_1400
   original: DSC05226_wvi31v_c_scale,w_1400.jpg
-  thumbnail: falce  
+  thumbnail: false  
 - filename: DSC05235_aeedjd_c_scale,w_1400
   original: DSC05235_aeedjd_c_scale,w_1400.jpg
-  thumbnail: falce  
+  thumbnail: false  
 - filename: P71012-070843_jrawic_c_scale,w_1400
   original: P71012-070843_jrawic_c_scale,w_1400.jpg
-  thumbnail: falce  
+  thumbnail: false  
 - filename: P71012-123043_eclyzy_c_scale,w_1400
   original: P71012-123043_eclyzy_c_scale,w_1400.jpg
-  thumbnail: falce  
+  thumbnail: false  
 - filename: carrot
   original: carrot.png
-  thumbnail: falce   
+  thumbnail: false   
 - filename: uknown1
   original: uknown1.jpg
-  thumbnail: falce   
+  thumbnail: false   
 - filename: uknown2
   original: uknown2.jpg
-  thumbnail: falce
+  thumbnail: false
 - filename: uknown3
   original: uknown3.jpg
-  thumbnail: falce         
+  thumbnail: false         
 - filename: cake
   original: cakes.jpg
-  thumbnail: falce     
+  thumbnail: false     
 - filename: cut
   original: cut.jpg
-  thumbnail: falce      
+  thumbnail: false      
 - filename: velvet
   original: velvet.jpg
-  thumbnail: falce
+  thumbnail: false
 - filename: berry1
   original: berry1.jpg
-  thumbnail: falce
+  thumbnail: false
 - filename: berry2
   original: berry2.jpg
-  thumbnail: falce
+  thumbnail: false
