Added google analitics

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ slack_url:
 twitter_url:
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+google_analytics: UA-115819909-1
 
 # The following settings are NECESSARY for the Prologue theme to run:
 collections:
