--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: SweetCake
-text: Торты на заказ в г.Бровары
+text: Торты на заказ в г. Бровары
 subtitle: Bon Appétit!
-description: >- # this means to ignore newlines until "baseurl:"
+description: Торты на заказ в г. Бровары
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
 avatar: assets/images/top.jpg
