--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ description: Торты на заказ в г. Бровары
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
 avatar: assets/images/top.jpg
+keywords: торт на заказ,торт на заказ Бровары, торт на заказ Киев, купить торт, красный бархат
  
 # You'll want to customize url and baseurl for your own site:
 # baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
