--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ description: Торты на заказ в г. Бровары
 author: Татьяна Таргоний
 email: vestichka@bigmir.net
 avatar: assets/images/top.jpg
-keywords: торт на заказ,торт на заказ Бровары, торт на заказ Киев, купить торт, красный бархат
+keywords: торт на заказ,торт на заказ Бровары, торт на заказ Киев, купить торт, красный бархат,Торты на заказ, торт на заказ киев,торты на заказ киев недорого, заказать торт с доставкой,  торты на заказ в киеве, торт на заказ в киеве, торты на заказ в киеве с доставкой,торт на заказ детский, торт на заказ праздничный, торт на заказ свадебный
  
 # You'll want to customize url and baseurl for your own site:
 # baseurl: "/sweatcake" # the subpath of your site, e.g. /blog
