--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ keywords: торт на заказ,торт на заказ Бровары, то
 # url: "sweetcake.biz.ua" # the base hostname & protocol for your site
 
 # Social settings
-facebook_url: https://www.facebook.com/vestichka
+facebook_url: https://www.facebook.com/sweetcake.biz.ua/
 github_url:
 googleplus_url:
 instagram_url: https://www.instagram.com/vestichka_cake/
