added new spinach photos

--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -50,3 +50,9 @@ pictures:
 - filename: spinach
   original: spinach.jpg
   thumbnail:     
+- filename: spinach2
+  original: spinach2.jpg
+  thumbnail:         
+- filename: spinach3
+  original: spinach3.jpg
+  thumbnail:         
