--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -102,42 +102,43 @@ pictures:
 
 - filename: feda
   original: feda.jpg
-
+thumbnail:  
 - filename: 3_choc
   original: 3_choc.jpg
-
+thumbnail:  
 - filename: 11
   original: 11.jpg
-
+thumbnail:  
  - filename: 12
   original: 12.jpg 
-
+thumbnail:  
   - filename: 13
   original: 13.jpg
-
+thumbnail:  
 
 - filename: 14
   original: 14.jpg
-
+thumbnail:  
 - filename: 15
   original: 15.jpg
-
+thumbnail:  
 - filename: 16
   original: 16.jpg
-
+thumbnail:  
 - filename: 17
   original: 17.jpg
-
+thumbnail:  
   - filename: 18
   original: 18.jpg
-
+thumbnail:  
 
 - filename: 19
   original: 19.jpg
-
+thumbnail:  
 
 - filename: 20
   original: 20.jpg
-
+thumbnail:  
   - filename: earl_gray
   original: earl_gray.jpg
+  thumbnail:  
