added 2 new cakes

--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -139,6 +139,6 @@ thumbnail:
 - filename: 20
   original: 20.jpg
 thumbnail:  
-- filename: earl_gray
-  original: earl_gray.jpg
+- filename: earl_grey
+  original: earl_grey.jpg
   thumbnail:  
