added kokos-mindal cake

--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -150,3 +150,7 @@ pictures:
 - filename: earl_grey_new-min
   original: earl_grey_new-min.jpg
   thumbnail:  
+
+- filename: mindal_cocos
+  original: mindal_cocos.jpg
+  thumbnail:  
