--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -154,3 +154,7 @@ pictures:
 - filename: mindal_cocos
   original: mindal_cocos.jpg
   thumbnail:  
+
+- filename: pistachio_2
+  original: pistachio_2.jpg
+  thumbnail:      
