added several new cakes

--- a/_data/galleries/output_carrot.yml
+++ b/_data/galleries/output_carrot.yml
@@ -4,39 +4,116 @@ pictures:
   original: top_new.jpg
   thumbnail: top_new.jpg
 
+- filename: 101
+  original: 101.jpg
+
+- filename: 102
+  original: 102.jpg
+
+- filename: 103
+  original: 103.jpg
+
+- filename: 104
+  original: 104.jpg
+
+
+- filename: 105
+  original: 105.jpg
+
+- filename: 106
+  original: 106.jpg
+
+- filename: 107
+  original: 107.jpg
+
+- filename: 108
+  original: 108.jpg
+
+- filename: 109
+  original: 109.jpg   
+
+- filename: 110
+  original: 110.jpg
+
+
+- filename: 111
+  original: 111.jpg
+
+- filename: 112
+  original: 112.jpg
+
+- filename: 113
+  original: 113.jpg
+
+- filename: 114
+  original: 114.jpg
+
+
+- filename: 115
+  original: 115.jpg
+
+- filename: 116
+  original: 116.jpg
+
+
+- filename: 117
+  original: 117.jpg
+
+- filename: 118
+  original: 118.jpg
+
+
+- filename: 119
+  original: 119.jpg
+
+
+- filename: 120
+  original: 120.jpg
+
+- filename: 121
+  original: 121.jpg
+
+- filename: 122
+  original: 122.jpg
+
+
+- filename: 123
+  original: 123.jpg
+
+
 
 - filename: cheescake
   original: cheescake.jpg
   thumbnail: cheescake.jpg
 
-- filename: Lichtfestival.png.jp-1400x1050
-  original: Lichtfestival.png.jp-1400x1050.jpg
-  thumbnail: cut.jpg    
+# - filename: Lichtfestival.png.jp-1400x1050
+#   original: Lichtfestival.png.jp-1400x1050.jpg
+#   thumbnail: cut.jpg    
 
-- filename: DSC05222_i4uxjp_c_scale,w_1400
-  original: DSC05222_i4uxjp_c_scale,w_1400.jpg
-  thumbnail: 
+# - filename: DSC05222_i4uxjp_c_scale,w_1400
+#   original: DSC05222_i4uxjp_c_scale,w_1400.jpg
+#   thumbnail: 
 
 
-- filename: P71012-070843_jrawic_c_scale,w_1400
-  original: P71012-070843_jrawic_c_scale,w_1400.jpg
-  thumbnail: 
+# - filename: P71012-070843_jrawic_c_scale,w_1400
+#   original: P71012-070843_jrawic_c_scale,w_1400.jpg
+  # thumbnail: 
 
-- filename: uknown1
-  original: uknown1.jpg
-  thumbnail: 
-- filename: uknown2
-  original: uknown2.jpg
-  thumbnail: 
+# - filename: uknown1
+#   original: uknown1.jpg
+  # thumbnail: 
+# - filename: uknown2
+#   original: uknown2.jpg
+  # thumbnail: 
 - filename: uknown3
   original: uknown3.jpg
   thumbnail: 
-- filename: cake
-  original: cakes.jpg
-  thumbnail: 
-- filename: velvet
-  original: velvet.jpg
-  thumbnail: 
+# - filename: cake
+#   original: cakes.jpg
+#   thumbnail: 
+# - filename: velvet
+#   original: velvet.jpg
+#   thumbnail: 
 
 - filename: berry2
   original: berry2.jpg
@@ -77,9 +154,9 @@ pictures:
   original: 4.jpg
   thumbnail:        
 
-- filename: 5
-  original: 5.jpg
-  thumbnail:            
+# - filename: 5
+#   original: 5.jpg
+  # thumbnail:            
 
 - filename: 6
   original: 6.jpg
